--- a/EventMaker/View/EventPage.xaml
+++ b/EventMaker/View/EventPage.xaml
@@ -6,6 +6,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ViewModel="using:EventMaker.ViewModel"
         
+    xmlns:Interactivity="using:Microsoft.Xaml.Interactivity" xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
+        
     x:Class="EventMaker.View.EventPage"
     mc:Ignorable="d">
 
@@ -19,6 +21,12 @@
             <AppBarButton.DataContext>
                 <local:CreateEventPage/>
             </AppBarButton.DataContext>
+            <Interactivity:Interaction.Behaviors>
+                <Core:EventTriggerBehavior EventName="Click">
+                    <Core:NavigateToPageAction TargetPage="EventMaker.View.CreateEventPage"/>
+                </Core:EventTriggerBehavior>
+            </Interactivity:Interaction.Behaviors>
+            <Border BorderBrush="Black" BorderThickness="1" Height="100" Width="100"/>
         </AppBarButton>
     </Grid>
 </Page>
