--- a/EventMaker/View/EventPage.xaml
+++ b/EventMaker/View/EventPage.xaml
@@ -18,10 +18,8 @@
     </Page.DataContext>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <ListView x:Name="listView" HorizontalAlignment="Left" Height="522" VerticalAlignment="Top" Width="336" Margin="82,57,0,0" ItemsSource="{Binding EventListe}">
-            <ListView.DataContext>
-                <Model:EventCatalogSingleton/>
-            </ListView.DataContext>
+        <ListView x:Name="listView" HorizontalAlignment="Left" Height="522" VerticalAlignment="Top" Width="336" Margin="82,57,0,0" ItemsSource="{Binding EListe}" SelectedItem="{Binding SelectedEvent}">
+            
         </ListView>
         <AppBarButton x:Name="appBarButton" HorizontalAlignment="Left" Icon="Accept" Label="appbarbutton" VerticalAlignment="Top" Margin="668,0,0,0" Command="{Binding Mode=OneWay}">
             <AppBarButton.DataContext>
