--- a/EventMaker/View/EventPage.xaml
+++ b/EventMaker/View/EventPage.xaml
@@ -18,10 +18,10 @@
     </Page.DataContext>
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <ListView x:Name="listView" HorizontalAlignment="Left" Height="522" VerticalAlignment="Top" Width="336" Margin="82,57,0,0" ItemsSource="{Binding EListe}" SelectedItem="{Binding SelectedEvent}">
+        <ListView x:Name="listView" HorizontalAlignment="Left" Height="522" VerticalAlignment="Top" Width="733" Margin="82,57,0,0" ItemsSource="{Binding MyEventCatalogSingleton.EventListe}" SelectedItem="{Binding SelectedEvent, Mode=TwoWay}">
             
         </ListView>
-        <AppBarButton x:Name="appBarButton" HorizontalAlignment="Left" Icon="Accept" Label="appbarbutton" VerticalAlignment="Top" Margin="668,0,0,0" Command="{Binding Mode=OneWay}">
+        <AppBarButton x:Name="appBarButton" HorizontalAlignment="Left" Icon="Accept" Label="Forside" VerticalAlignment="Top" Margin="1000,0,0,0" Command="{Binding Mode=OneWay}">
             <AppBarButton.DataContext>
                 <local:CreateEventPage/>
             </AppBarButton.DataContext>
@@ -32,5 +32,7 @@
             </Interactivity:Interaction.Behaviors>
             <Border BorderBrush="Black" BorderThickness="1" Height="100" Width="100"/>
         </AppBarButton>
+        <AppBarButton x:Name="appBarButton1" HorizontalAlignment="Left" Icon="Accept" Label="DeleteEvent" Margin="1119,85,0,0" VerticalAlignment="Top" Command="{Binding DeleteEventCommand}"/>
+        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" Margin="101,649,0,0" TextWrapping="Wrap" Text="{Binding SelectedEvent}" VerticalAlignment="Top" Height="61" Width="752"/>
     </Grid>
 </Page>
