fiksede vores problem med knappen som tilføjede et event for meget, og udcommenterede addevent, da den ikke blev brugt.

--- a/EventMaker/View/CreateEventPage.xaml
+++ b/EventMaker/View/CreateEventPage.xaml
@@ -24,7 +24,7 @@
             <LineBreak/>
             <Run/>
         </TextBlock>
-        <AppBarButton x:Name="appBarButton" HorizontalAlignment="Left" Icon="Accept" Label="appbarbutton" Margin="394,74,0,0" VerticalAlignment="Top" Command="{Binding CreateEventCommand}">
+        <AppBarButton x:Name="appBarButton" HorizontalAlignment="Left" Icon="Accept" Label="appbarbutton" Margin="394,74,0,0" VerticalAlignment="Top">
             <AppBarButton.DataContext>
                 <ViewModel:EventViewModel/>
             </AppBarButton.DataContext>
